--- a/doc/rapport.tex
+++ b/doc/rapport.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{scrartcl}
 \usepackage[utf8]{inputenc}
-\usepackage[frenchb]{babel}
+\usepackage[francais]{babel}
 \usepackage{amsmath} % math
 \usepackage{amssymb} % math
 \usepackage{gensymb} % math
@@ -11,7 +11,6 @@
     \urlstyle{sf}
 \usepackage[usenames]{color}
 \usepackage{array}
-\usepackage{varioref}
 %\usepackage{etex} % chimie
 %\usepackage{m-pictex} % chimie
 %\usepackage{m-ch-en} % chimie
@@ -49,114 +48,94 @@
 \maketitle
 % \tableofcontents
 \section{Performances du programme}
-Afin de comparer les performances de notre programme avec une implémentation triviale de matrices pleines (avec un tableau à deux dimensions), nous fournissons avec notre code les deux implémentations. Le premier se trouve dans \texttt{matrix.c} et le deuxième dans \texttt{matrix\_plain.c}. Concernant les exécutables, lors de l'utilisation de la commande \texttt{make}, deux binaires seront produits: \texttt{matrixprod} et \texttt{matrixprod\_plain}.
+\subsection{Contexte}
+Afin de comparer les performances de notre programme avec une implémentation triviale de matrices pleines (avec un tableau à deux dimensions), nous fournissons avec notre code les deux implémentations. La première se trouve dans \texttt{matrix.c} et la deuxième dans \texttt{matrix\_plain.c}. Concernant les exécutables, lors de l'utilisation de la commande \texttt{make}, deux binaires seront produits: \texttt{matrixprod} et \texttt{matrixprod\_plain}.
+
 \subsection{Mesures réalisées}
-Voici plusieurs mesures réalisées avec plusieurs matrices allant de 90 à 100 éléments par colonnes et lignes. Dans ces tableaux, nous retrouvons à chaque fois, dans la première colonne, le nombre de matrices à multiplier et dans la seconde, le temps mis pour faire l'entièreté des multiplications. 
-\begin{table}[H]
-    \caption{Pleine}
-    \label{tab:10}
+Dans les tableaux \ref{tab:plein} et suivants se retrouvent différentes mesures réalisées avec plusieurs matrices allant de 90 à 100 éléments par colonnes et lignes. Dans ces tableaux, nous retrouvons à chaque fois, dans la première colonne, le nombre de matrices à multiplier et dans la seconde, le temps mis pour faire l'entièreté des multiplications. Le temps de calculs avec les matrices pleines ne varie pas en fonction de la composition de la matrice.\\
+
+\begin{table}
+    \caption{Calculs avec l'implémentation de matrices pleines}
+    \label{tab:plein}
     \begin{center}
-        \begin{tabular}{cc}
-             nbr matrix & temps (s)\\
+        \begin{tabular}{c|c}
+            Nombre matrices & Temps (s)\\
             \hline
             2 &        0.015 \\
-
     3 &        0.016 \\
-
     4 &        0.027 \\
-
     5 &        0.020 \\
-
     10 &        0.043\\
-
     15 &        0.066 \\
-
     20 &        0.098 \\
-
         \end{tabular}
     \end{center}
 \end{table}
-\begin{table}[H]
-    \caption{Creuses à environ 90\%}
-    \label{tab:10}
+\begin{table}
+    \caption{Calculs avec l'implémentation de matrices creuses, pour des matrices creuses à environ 90\%}
+    \label{tab:90}
     \begin{center}
-        \begin{tabular}{cc}
-             nbr matrix & temps (s)\\
+        \begin{tabular}{c|c}
+            Nombre matrices & Temps (s)\\
             \hline
             2 &        0.012 \\
-
     3 &        0.030 \\
-
     4 &        0.031 \\
-
     5 &        0.049 \\
-
     10 &        0.103\\
-
     15 &        0.160 \\
-
     20 &        0.220 \\
-
         \end{tabular}
     \end{center}
 \end{table}
-\begin{table}[H]
-    \caption{Creuses à environ 95\%}
-    \label{tab:}
+\begin{table}
+    \caption{Calculs avec l'implémentation de matrices creuses, pour des matrices creuses à environ 95\%}
+    \label{tab:95}
     \begin{center}
-        \begin{tabular}{cc}
-              nbr matrix & temps (s)\\
+        \begin{tabular}{c|c}
+            Nombre matrices & Temps (s)\\
             \hline
             2 &        0.000\\
-
     3 &        0.012\\
-
     4 &        0.020\\
-
     5 &        0.028\\
-
     10 &        0.092\\
-
     15 &        0.148\\
-
     20 &        0.188\\
-
         \end{tabular}
     \end{center}
 \end{table}
-\begin{table}[H]
-    \caption{Creuses à environ 99\%}
-    \label{tab:}
+\begin{table}
+    \caption{Calculs avec l'implémentation de matrices creuses, pour des matrices creuses à environ 99\%}
+    \label{tab:99}
     \begin{center}
-        \begin{tabular}{cc}
-            nbr matrix & temps (s)\\
+        \begin{tabular}{c|c}
+            Nombre matrices & Temps (s)\\
             \hline
              2 &         0.000\\
-
     3 &           0.004\\
-
     4 &        0.004\\
-
     5 &       0.004\\
-
     10 &         0.008\\
-
     15 &         0.008 \\
-
     20 &         0.016\\
-
         \end{tabular}
     \end{center}
 \end{table}
-\begin{figure}[H]
+
+La représentation graphique se trouve à la figure \ref{fig:time}.\\
+
+Pour des matrices de tailles variant de 3000 à 3500,  l'implémentation en matrice creuse met environ 4 fois moins de temps que l'implémentation en matrice pleine pour la multiplication de deux matrices: 1.324s pour l'implémentation creuse et 4.940s pour l'implémentation pleine.
+
+\newpage
+\section{Utilité de l'implémentation de matrices creuses}
+\begin{figure}
     \begin{center}
         \includegraphics[width=\textwidth]{matrixgraph.png}
         \caption{Représentation graphique des données venant des 3 tableaux précédents}
         \label{fig:time}
     \end{center}
 \end{figure}
-La représentation graphique se trouve dans la figure \ref{fig:time}.
-Pour des matrices de tailles variant de 3000 à 3500,  l'implémentation en matrice creuse met environ 4 fois moins de temps que l'implémentation en matrice pleine pour la multiplication de deux matrices: 1.324s pour l'implémentation creuse et 4.940s pour l'implémentation pleine.
-\section{Utilité de l'implémentation de matrices creuses}
-Comme on peut le voir avec les données des tableaux précédents et surtout du graphe \ref{fig:time}, \vpageref{fig:time}, plus les matrices sont creuses, plus notre implémentation devient intéressante. Ceci est tout a fait logique puisque la structure utilisée est beaucoup plus complexe et importante dans notre implémentation comparé à un simple tableau en deux dimensions. Quand il y a peu d'informations dans la matrice (imaginons une matrice diagonale), notre implémentation devient très intéressante car il n'y aura que des calculs avec les éléments existants : si deux matrices de 1000x1000 ne contiennent qu'un seul élément, seuls ces deux éléments seront consultés. La place en mémoire sera également intéressantes dans ce cas de très grandes matrices.
+
+Comme on peut le voir avec les données des tableaux précédents et surtout du graphe \ref{fig:time} plus les matrices sont creuses, plus notre implémentation devient intéressante. Ceci est tout a fait logique puisque la structure utilisée est beaucoup plus complexe et importante dans notre implémentation comparé à un simple tableau en deux dimensions. Quand il y a peu d'informations dans la matrice (imaginons une matrice diagonale), notre implémentation devient très intéressante car il n'y aura que des calculs avec les éléments existants : si deux matrices de 1000x1000 ne contiennent qu'un seul élément, seuls ces deux éléments seront consultés. La place en mémoire sera également intéressantes dans ce cas de très grandes matrices.
 \end{document}
